--- a/tex/graphics/41-digit3-pen.tex
+++ b/tex/graphics/41-digit3-pen.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2021-12-04 18:44:17
+% Created by tikzDevice version 0.12.3.1 on 2021-12-08 19:12:01
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -6,173 +6,173 @@
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] ( -0.00,  0.00) rectangle (108.41,108.41);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  6.64,  0.00) rectangle (101.77,108.41);
 \end{scope}
 \begin{scope}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] ( 20.71, 20.71) rectangle (102.91,102.91);
+\path[fill=fillColor] ( 27.35, 20.71) rectangle ( 96.27, 89.63);
 \definecolor{drawColor}{gray}{0.92}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 25.50) --
-	(102.91, 25.50);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 27.35, 24.73) --
+	( 96.27, 24.73);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 46.29) --
-	(102.91, 46.29);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 27.35, 42.16) --
+	( 96.27, 42.16);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 67.07) --
-	(102.91, 67.07);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 27.35, 59.59) --
+	( 96.27, 59.59);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 87.86) --
-	(102.91, 87.86);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 27.35, 77.02) --
+	( 96.27, 77.02);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 30.22, 20.71) --
-	( 30.22,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 35.32, 20.71) --
+	( 35.32, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 47.79, 20.71) --
-	( 47.79,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 50.05, 20.71) --
+	( 50.05, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 65.36, 20.71) --
-	( 65.36,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 64.79, 20.71) --
+	( 64.79, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 82.93, 20.71) --
-	( 82.93,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 79.52, 20.71) --
+	( 79.52, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (100.50, 20.71) --
-	(100.50,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 94.25, 20.71) --
+	( 94.25, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 35.89) --
-	(102.91, 35.89);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.35, 33.44) --
+	( 96.27, 33.44);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 56.68) --
-	(102.91, 56.68);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.35, 50.87) --
+	( 96.27, 50.87);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 77.47) --
-	(102.91, 77.47);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.35, 68.30) --
+	( 96.27, 68.30);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 98.25) --
-	(102.91, 98.25);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.35, 85.73) --
+	( 96.27, 85.73);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 21.44, 20.71) --
-	( 21.44,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 27.96, 20.71) --
+	( 27.96, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 39.01, 20.71) --
-	( 39.01,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 42.69, 20.71) --
+	( 42.69, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 56.57, 20.71) --
-	( 56.57,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 57.42, 20.71) --
+	( 57.42, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 74.14, 20.71) --
-	( 74.14,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 72.15, 20.71) --
+	( 72.15, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 91.71, 20.71) --
-	( 91.71,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 86.88, 20.71) --
+	( 86.88, 89.63);
 \definecolor{drawColor}{RGB}{227,26,28}
 
-\path[draw=drawColor,line width= 1.1pt,line join=round] ( 60.45, 99.17) --
-	( 57.80, 99.13) --
-	( 55.34, 99.01) --
-	( 53.07, 98.81) --
-	( 50.96, 98.55) --
-	( 49.02, 98.23) --
-	( 47.23, 97.85) --
-	( 45.59, 97.41) --
-	( 44.08, 96.93) --
-	( 42.67, 96.40) --
-	( 41.29, 95.78) --
-	( 39.91, 95.08) --
-	( 38.54, 94.29) --
-	( 37.17, 93.40) --
-	( 35.80, 92.42) --
-	( 34.42, 91.33) --
-	( 33.05, 90.14) --
-	( 31.68, 88.84) --
-	( 30.41, 87.42) --
-	( 29.26, 85.87) --
-	( 28.23, 84.16) --
-	( 27.31, 82.28) --
-	( 26.49, 80.21) --
-	( 25.78, 77.93) --
-	( 25.18, 75.41) --
-	( 24.70, 72.62) --
-	( 24.45, 69.86) --
-	( 24.52, 67.41) --
-	( 24.87, 65.20) --
-	( 25.49, 63.16) --
-	( 26.40, 61.24) --
-	( 27.64, 59.39) --
-	( 29.26, 57.59) --
-	( 31.32, 55.81) --
-	( 33.78, 54.13) --
-	( 36.24, 52.73) --
-	( 38.68, 51.62) --
-	( 41.13, 50.78) --
-	( 43.60, 50.20) --
-	( 46.10, 49.87) --
-	( 48.65, 49.79) --
-	( 51.28, 49.96) --
-	( 53.98, 50.39) --
-	( 56.49, 50.87) --
-	( 58.74, 51.32) --
-	( 60.73, 51.74) --
-	( 62.49, 52.15) --
-	( 64.04, 52.53) --
-	( 65.37, 52.89) --
-	( 66.52, 53.23) --
-	( 67.50, 53.54) --
-	( 68.25, 53.78) --
-	( 68.76, 53.89) --
-	( 69.09, 53.92) --
-	( 69.27, 53.89) --
-	( 69.35, 53.84) --
-	( 69.39, 53.77) --
-	( 69.39, 53.65) --
-	( 69.32, 53.44) --
-	( 69.15, 53.12) --
-	( 68.91, 52.72) --
-	( 68.56, 52.23) --
-	( 68.09, 51.65) --
-	( 67.49, 50.96) --
-	( 66.73, 50.16) --
-	( 65.81, 49.23) --
-	( 64.69, 48.17) --
-	( 63.39, 46.97) --
-	( 62.17, 45.67) --
-	( 61.08, 44.26) --
-	( 60.12, 42.73) --
-	( 59.29, 41.07) --
-	( 58.57, 39.25) --
-	( 57.96, 37.26) --
-	( 57.48, 35.07) --
-	( 57.11, 32.66) --
-	( 57.01, 30.44) --
-	( 57.23, 28.78) --
-	( 57.70, 27.50) --
-	( 58.44, 26.48) --
-	( 59.53, 25.65) --
-	( 61.08, 25.00) --
-	( 63.26, 24.57) --
-	( 66.23, 24.45) --
-	( 69.83, 24.69) --
-	( 73.13, 25.17) --
-	( 76.09, 25.83) --
-	( 78.74, 26.68) --
-	( 81.10, 27.69) --
-	( 83.22, 28.85) --
-	( 85.12, 30.17) --
-	( 86.83, 31.64) --
-	( 88.37, 33.26) --
-	( 89.85, 34.79) --
-	( 91.28, 36.15) --
-	( 92.67, 37.36) --
-	( 94.03, 38.42) --
-	( 95.36, 39.35) --
-	( 96.65, 40.15) --
-	( 97.92, 40.83) --
-	( 99.17, 41.40);
+\path[draw=drawColor,line width= 1.1pt,line join=round] ( 60.67, 86.50) --
+	( 58.45, 86.47) --
+	( 56.39, 86.36) --
+	( 54.48, 86.20) --
+	( 52.71, 85.98) --
+	( 51.08, 85.71) --
+	( 49.58, 85.39) --
+	( 48.21, 85.03) --
+	( 46.94, 84.63) --
+	( 45.76, 84.18) --
+	( 44.60, 83.66) --
+	( 43.45, 83.07) --
+	( 42.29, 82.41) --
+	( 41.14, 81.66) --
+	( 40.00, 80.84) --
+	( 38.85, 79.93) --
+	( 37.69, 78.93) --
+	( 36.54, 77.84) --
+	( 35.48, 76.65) --
+	( 34.52, 75.35) --
+	( 33.65, 73.91) --
+	( 32.88, 72.34) --
+	( 32.19, 70.60) --
+	( 31.60, 68.69) --
+	( 31.09, 66.58) --
+	( 30.69, 64.24) --
+	( 30.48, 61.93) --
+	( 30.54, 59.87) --
+	( 30.83, 58.01) --
+	( 31.35, 56.30) --
+	( 32.12, 54.69) --
+	( 33.16, 53.14) --
+	( 34.52, 51.63) --
+	( 36.25, 50.14) --
+	( 38.30, 48.73) --
+	( 40.37, 47.56) --
+	( 42.42, 46.63) --
+	( 44.47, 45.93) --
+	( 46.54, 45.44) --
+	( 48.63, 45.16) --
+	( 50.78, 45.09) --
+	( 52.98, 45.24) --
+	( 55.25, 45.60) --
+	( 57.35, 46.00) --
+	( 59.23, 46.37) --
+	( 60.91, 46.73) --
+	( 62.38, 47.07) --
+	( 63.68, 47.40) --
+	( 64.80, 47.70) --
+	( 65.76, 47.98) --
+	( 66.58, 48.24) --
+	( 67.21, 48.44) --
+	( 67.64, 48.53) --
+	( 67.91, 48.56) --
+	( 68.06, 48.54) --
+	( 68.14, 48.49) --
+	( 68.17, 48.43) --
+	( 68.16, 48.33) --
+	( 68.10, 48.16) --
+	( 67.97, 47.89) --
+	( 67.76, 47.55) --
+	( 67.47, 47.14) --
+	( 67.08, 46.65) --
+	( 66.57, 46.08) --
+	( 65.94, 45.40) --
+	( 65.16, 44.63) --
+	( 64.23, 43.74) --
+	( 63.14, 42.73) --
+	( 62.11, 41.64) --
+	( 61.20, 40.46) --
+	( 60.40, 39.17) --
+	( 59.70, 37.78) --
+	( 59.09, 36.26) --
+	( 58.58, 34.59) --
+	( 58.18, 32.75) --
+	( 57.87, 30.73) --
+	( 57.78, 28.87) --
+	( 57.97, 27.47) --
+	( 58.36, 26.40) --
+	( 58.99, 25.55) --
+	( 59.90, 24.85) --
+	( 61.20, 24.31) --
+	( 63.03, 23.95) --
+	( 65.52, 23.85) --
+	( 68.54, 24.05) --
+	( 71.30, 24.45) --
+	( 73.78, 25.01) --
+	( 76.00, 25.72) --
+	( 77.99, 26.56) --
+	( 79.77, 27.54) --
+	( 81.36, 28.64) --
+	( 82.79, 29.88) --
+	( 84.08, 31.24) --
+	( 85.32, 32.52) --
+	( 86.52, 33.66) --
+	( 87.69, 34.67) --
+	( 88.83, 35.56) --
+	( 89.94, 36.34) --
+	( 91.03, 37.01) --
+	( 92.09, 37.58) --
+	( 93.14, 38.06);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 20.71) rectangle (102.91,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 27.35, 20.71) rectangle ( 96.27, 89.63);
 \end{scope}
 \begin{scope}
 \definecolor{drawColor}{RGB}{0,0,0}
@@ -182,176 +182,181 @@
 \begin{scope}
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08, 61.81) {$\Im(\hat\mu)$};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 19.71, 55.17) {$\Im(\hat\mu)$};
+\end{scope}
+\begin{scope}
+\definecolor{drawColor}{gray}{0.25}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 61.81, 96.84) {no penalty};
 \end{scope}
 \begin{scope}
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (108.41,  0.00) rectangle (216.81,108.41);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (115.04,  0.00) rectangle (210.17,108.41);
 \end{scope}
 \begin{scope}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (129.12, 20.71) rectangle (211.31,102.91);
+\path[fill=fillColor] (135.76, 20.71) rectangle (204.67, 89.63);
 \definecolor{drawColor}{gray}{0.92}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (129.12, 36.60) --
-	(211.31, 36.60);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (135.76, 34.03) --
+	(204.67, 34.03);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (129.12, 56.62) --
-	(211.31, 56.62);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (135.76, 50.83) --
+	(204.67, 50.83);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (129.12, 76.65) --
-	(211.31, 76.65);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (135.76, 67.62) --
+	(204.67, 67.62);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (129.12, 96.67) --
-	(211.31, 96.67);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (135.76, 84.41) --
+	(204.67, 84.41);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (130.43, 20.71) --
-	(130.43,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (136.86, 20.71) --
+	(136.86, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (148.69, 20.71) --
-	(148.69,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (152.16, 20.71) --
+	(152.16, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (166.94, 20.71) --
-	(166.94,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (167.47, 20.71) --
+	(167.47, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (185.19, 20.71) --
-	(185.19,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (182.77, 20.71) --
+	(182.77, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (203.44, 20.71) --
-	(203.44,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (198.08, 20.71) --
+	(198.08, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (129.12, 26.59) --
-	(211.31, 26.59);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (135.76, 25.64) --
+	(204.67, 25.64);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (129.12, 46.61) --
-	(211.31, 46.61);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (135.76, 42.43) --
+	(204.67, 42.43);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (129.12, 66.64) --
-	(211.31, 66.64);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (135.76, 59.22) --
+	(204.67, 59.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (129.12, 86.66) --
-	(211.31, 86.66);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (135.76, 76.01) --
+	(204.67, 76.01);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (139.56, 20.71) --
-	(139.56,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (144.51, 20.71) --
+	(144.51, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (157.81, 20.71) --
-	(157.81,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (159.82, 20.71) --
+	(159.82, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (176.06, 20.71) --
-	(176.06,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (175.12, 20.71) --
+	(175.12, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (194.32, 20.71) --
-	(194.32,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (190.42, 20.71) --
+	(190.42, 89.63);
 \definecolor{drawColor}{RGB}{227,26,28}
 
-\path[draw=drawColor,line width= 1.1pt,line join=round] (169.32, 24.45) --
-	(171.20, 24.48) --
-	(173.07, 24.57) --
-	(174.94, 24.72) --
-	(176.80, 24.93) --
-	(178.67, 25.21) --
-	(180.53, 25.54) --
-	(182.40, 25.94) --
-	(184.28, 26.39) --
-	(186.14, 26.92) --
-	(187.96, 27.54) --
-	(189.73, 28.26) --
-	(191.45, 29.07) --
-	(193.14, 29.98) --
-	(194.79, 30.98) --
-	(196.42, 32.09) --
-	(198.02, 33.31) --
-	(199.58, 34.64) --
-	(201.02, 36.08) --
-	(202.31, 37.63) --
-	(203.45, 39.31) --
-	(204.47, 41.13) --
-	(205.37, 43.11) --
-	(206.14, 45.27) --
-	(206.78, 47.64) --
-	(207.30, 50.24) --
-	(207.57, 52.80) --
-	(207.53, 55.10) --
-	(207.21, 57.18) --
-	(206.60, 59.11) --
-	(205.71, 60.94) --
-	(204.49, 62.71) --
-	(202.90, 64.45) --
-	(200.86, 66.17) --
-	(198.45, 67.81) --
-	(196.06, 69.19) --
-	(193.71, 70.30) --
-	(191.39, 71.17) --
-	(189.09, 71.80) --
-	(186.79, 72.21) --
-	(184.48, 72.40) --
-	(182.13, 72.38) --
-	(179.75, 72.15) --
-	(177.50, 71.86) --
-	(175.43, 71.56) --
-	(173.54, 71.25) --
-	(171.81, 70.93) --
-	(170.24, 70.60) --
-	(168.82, 70.28) --
-	(167.54, 69.95) --
-	(166.39, 69.61) --
-	(165.47, 69.36) --
-	(164.83, 69.22) --
-	(164.43, 69.18) --
-	(164.21, 69.19) --
-	(164.10, 69.23) --
-	(164.06, 69.28) --
-	(164.06, 69.37) --
-	(164.13, 69.54) --
-	(164.30, 69.82) --
-	(164.57, 70.20) --
-	(164.96, 70.69) --
-	(165.49, 71.31) --
-	(166.19, 72.08) --
-	(167.09, 73.01) --
-	(168.20, 74.12) --
-	(169.55, 75.42) --
-	(171.13, 76.93) --
-	(172.59, 78.51) --
-	(173.84, 80.13) --
-	(174.91, 81.81) --
-	(175.79, 83.55) --
-	(176.51, 85.37) --
-	(177.07, 87.30) --
-	(177.48, 89.34) --
-	(177.72, 91.52) --
-	(177.71, 93.51) --
-	(177.41, 95.03) --
-	(176.87, 96.22) --
-	(176.07, 97.19) --
-	(174.93, 97.98) --
-	(173.34, 98.60) --
-	(171.16, 99.02) --
-	(168.25, 99.17) --
-	(164.74, 98.99) --
-	(161.45, 98.60) --
-	(158.42, 98.01) --
-	(155.63, 97.24) --
-	(153.06, 96.29) --
-	(150.68, 95.17) --
-	(148.47, 93.89) --
-	(146.41, 92.42) --
-	(144.49, 90.80) --
-	(142.68, 89.26) --
-	(140.98, 87.88) --
-	(139.39, 86.65) --
-	(137.90, 85.57) --
-	(136.50, 84.61) --
-	(135.20, 83.78) --
-	(133.99, 83.07) --
-	(132.86, 82.47);
+\path[draw=drawColor,line width= 1.1pt,line join=round] (169.47, 23.85) --
+	(171.04, 23.87) --
+	(172.61, 23.95) --
+	(174.18, 24.07) --
+	(175.74, 24.25) --
+	(177.30, 24.48) --
+	(178.87, 24.76) --
+	(180.43, 25.09) --
+	(182.01, 25.48) --
+	(183.57, 25.92) --
+	(185.09, 26.44) --
+	(186.58, 27.04) --
+	(188.02, 27.72) --
+	(189.44, 28.48) --
+	(190.83, 29.32) --
+	(192.19, 30.26) --
+	(193.53, 31.28) --
+	(194.84, 32.39) --
+	(196.05, 33.60) --
+	(197.12, 34.90) --
+	(198.09, 36.31) --
+	(198.94, 37.83) --
+	(199.69, 39.49) --
+	(200.34, 41.31) --
+	(200.88, 43.29) --
+	(201.31, 45.47) --
+	(201.54, 47.62) --
+	(201.51, 49.55) --
+	(201.23, 51.29) --
+	(200.73, 52.91) --
+	(199.98, 54.45) --
+	(198.96, 55.93) --
+	(197.62, 57.39) --
+	(195.92, 58.83) --
+	(193.89, 60.21) --
+	(191.88, 61.36) --
+	(189.92, 62.29) --
+	(187.97, 63.02) --
+	(186.04, 63.55) --
+	(184.11, 63.90) --
+	(182.17, 64.06) --
+	(180.21, 64.04) --
+	(178.21, 63.85) --
+	(176.32, 63.60) --
+	(174.59, 63.35) --
+	(173.00, 63.09) --
+	(171.55, 62.82) --
+	(170.24, 62.55) --
+	(169.04, 62.27) --
+	(167.97, 62.00) --
+	(167.01, 61.72) --
+	(166.23, 61.50) --
+	(165.70, 61.39) --
+	(165.37, 61.35) --
+	(165.18, 61.36) --
+	(165.09, 61.39) --
+	(165.06, 61.44) --
+	(165.06, 61.52) --
+	(165.11, 61.66) --
+	(165.25, 61.89) --
+	(165.48, 62.21) --
+	(165.80, 62.62) --
+	(166.25, 63.14) --
+	(166.84, 63.78) --
+	(167.59, 64.56) --
+	(168.52, 65.50) --
+	(169.66, 66.59) --
+	(170.98, 67.85) --
+	(172.21, 69.18) --
+	(173.26, 70.54) --
+	(174.15, 71.94) --
+	(174.89, 73.40) --
+	(175.50, 74.93) --
+	(175.97, 76.54) --
+	(176.31, 78.26) --
+	(176.51, 80.09) --
+	(176.50, 81.76) --
+	(176.25, 83.03) --
+	(175.80, 84.03) --
+	(175.12, 84.84) --
+	(174.17, 85.50) --
+	(172.84, 86.03) --
+	(171.01, 86.38) --
+	(168.57, 86.50) --
+	(165.62, 86.35) --
+	(162.86, 86.02) --
+	(160.32, 85.53) --
+	(157.99, 84.88) --
+	(155.83, 84.09) --
+	(153.83, 83.15) --
+	(151.98, 82.07) --
+	(150.25, 80.84) --
+	(148.64, 79.48) --
+	(147.13, 78.19) --
+	(145.70, 77.04) --
+	(144.37, 76.01) --
+	(143.11, 75.09) --
+	(141.95, 74.30) --
+	(140.85, 73.60) --
+	(139.84, 73.00) --
+	(138.89, 72.50);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (129.12, 20.71) rectangle (211.31,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (135.76, 20.71) rectangle (204.67, 89.63);
 \end{scope}
 \begin{scope}
 \definecolor{drawColor}{RGB}{0,0,0}
@@ -361,173 +366,178 @@
 \begin{scope}
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (121.48, 61.81) {$\Im(\hat\mu)$};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (128.12, 55.17) {$\Im(\hat\mu)$};
+\end{scope}
+\begin{scope}
+\definecolor{drawColor}{gray}{0.25}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (170.21, 96.84) {$p = 0$};
 \end{scope}
 \begin{scope}
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (216.81,  0.00) rectangle (325.22,108.41);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (223.45,  0.00) rectangle (318.58,108.41);
 \end{scope}
 \begin{scope}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (237.52, 20.71) rectangle (319.72,102.91);
+\path[fill=fillColor] (244.16, 20.71) rectangle (313.08, 89.63);
 \definecolor{drawColor}{gray}{0.92}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (237.52, 36.84) --
-	(319.71, 36.84);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (244.16, 34.24) --
+	(313.08, 34.24);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (237.52, 56.64) --
-	(319.71, 56.64);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (244.16, 50.84) --
+	(313.08, 50.84);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (237.52, 76.43) --
-	(319.71, 76.43);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (244.16, 67.43) --
+	(313.08, 67.43);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (237.52, 96.23) --
-	(319.71, 96.23);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (244.16, 84.03) --
+	(313.08, 84.03);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (256.51, 20.71) --
-	(256.51,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (260.08, 20.71) --
+	(260.08, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (275.64, 20.71) --
-	(275.64,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (276.12, 20.71) --
+	(276.12, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (294.78, 20.71) --
-	(294.78,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (292.17, 20.71) --
+	(292.17, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (313.91, 20.71) --
-	(313.91,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (308.21, 20.71) --
+	(308.21, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (237.52, 26.94) --
-	(319.71, 26.94);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (244.16, 25.94) --
+	(313.08, 25.94);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (237.52, 46.74) --
-	(319.71, 46.74);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (244.16, 42.54) --
+	(313.08, 42.54);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (237.52, 66.53) --
-	(319.71, 66.53);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (244.16, 59.13) --
+	(313.08, 59.13);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (237.52, 86.33) --
-	(319.71, 86.33);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (244.16, 75.73) --
+	(313.08, 75.73);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (246.94, 20.71) --
-	(246.94,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (252.05, 20.71) --
+	(252.05, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (266.07, 20.71) --
-	(266.07,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (268.10, 20.71) --
+	(268.10, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (285.21, 20.71) --
-	(285.21,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (284.15, 20.71) --
+	(284.15, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (304.34, 20.71) --
-	(304.34,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (300.19, 20.71) --
+	(300.19, 89.63);
 \definecolor{drawColor}{RGB}{227,26,28}
 
-\path[draw=drawColor,line width= 1.1pt,line join=round] (272.78, 24.45) --
-	(275.24, 24.48) --
-	(277.63, 24.56) --
-	(279.95, 24.70) --
-	(282.20, 24.89) --
-	(284.39, 25.13) --
-	(286.52, 25.42) --
-	(288.59, 25.76) --
-	(290.61, 26.15) --
-	(292.57, 26.60) --
-	(294.49, 27.15) --
-	(296.37, 27.80) --
-	(298.21, 28.57) --
-	(300.03, 29.44) --
-	(301.82, 30.43) --
-	(303.60, 31.53) --
-	(305.36, 32.76) --
-	(307.10, 34.12) --
-	(308.69, 35.58) --
-	(310.11, 37.12) --
-	(311.38, 38.76) --
-	(312.50, 40.52) --
-	(313.47, 42.40) --
-	(314.32, 44.43) --
-	(315.03, 46.62) --
-	(315.60, 48.99) --
-	(315.94, 51.34) --
-	(315.98, 53.46) --
-	(315.74, 55.40) --
-	(315.25, 57.22) --
-	(314.48, 58.96) --
-	(313.42, 60.65) --
-	(312.02, 62.31) --
-	(310.22, 63.98) --
-	(308.08, 65.60) --
-	(305.92, 66.99) --
-	(303.74, 68.16) --
-	(301.54, 69.12) --
-	(299.31, 69.88) --
-	(297.03, 70.45) --
-	(294.68, 70.82) --
-	(292.25, 71.01) --
-	(289.74, 71.01) --
-	(287.36, 70.93) --
-	(285.15, 70.81) --
-	(283.12, 70.65) --
-	(281.26, 70.46) --
-	(279.55, 70.24) --
-	(277.99, 69.99) --
-	(276.58, 69.71) --
-	(275.29, 69.42) --
-	(274.25, 69.18) --
-	(273.54, 69.05) --
-	(273.08, 69.00) --
-	(272.82, 69.00) --
-	(272.70, 69.03) --
-	(272.66, 69.08) --
-	(272.66, 69.14) --
-	(272.72, 69.27) --
-	(272.88, 69.48) --
-	(273.17, 69.82) --
-	(273.60, 70.29) --
-	(274.21, 70.93) --
-	(275.03, 71.76) --
-	(276.09, 72.81) --
-	(277.43, 74.10) --
-	(279.07, 75.65) --
-	(281.00, 77.47) --
-	(282.76, 79.33) --
-	(284.22, 81.15) --
-	(285.40, 82.93) --
-	(286.35, 84.70) --
-	(287.07, 86.46) --
-	(287.59, 88.23) --
-	(287.91, 90.05) --
-	(288.05, 91.91) --
-	(287.95, 93.61) --
-	(287.61, 94.96) --
-	(287.06, 96.05) --
-	(286.29, 96.95) --
-	(285.23, 97.71) --
-	(283.81, 98.34) --
-	(281.93, 98.82) --
-	(279.46, 99.11) --
-	(276.51, 99.17) --
-	(273.66, 99.04) --
-	(270.97, 98.75) --
-	(268.40, 98.29) --
-	(265.94, 97.67) --
-	(263.59, 96.89) --
-	(261.32, 95.95) --
-	(259.13, 94.84) --
-	(257.01, 93.58) --
-	(254.92, 92.29) --
-	(252.87, 91.01) --
-	(250.85, 89.75) --
-	(248.87, 88.51) --
-	(246.92, 87.27) --
-	(245.00, 86.06) --
-	(243.11, 84.86) --
-	(241.26, 83.67);
+\path[draw=drawColor,line width= 1.1pt,line join=round] (273.73, 23.85) --
+	(275.79, 23.87) --
+	(277.79, 23.94) --
+	(279.73, 24.06) --
+	(281.62, 24.22) --
+	(283.46, 24.42) --
+	(285.25, 24.66) --
+	(286.98, 24.95) --
+	(288.67, 25.27) --
+	(290.32, 25.65) --
+	(291.93, 26.11) --
+	(293.50, 26.66) --
+	(295.05, 27.30) --
+	(296.57, 28.03) --
+	(298.08, 28.86) --
+	(299.57, 29.79) --
+	(301.04, 30.82) --
+	(302.50, 31.96) --
+	(303.84, 33.18) --
+	(305.03, 34.47) --
+	(306.09, 35.85) --
+	(307.03, 37.32) --
+	(307.85, 38.90) --
+	(308.55, 40.60) --
+	(309.15, 42.44) --
+	(309.63, 44.43) --
+	(309.91, 46.39) --
+	(309.95, 48.17) --
+	(309.75, 49.80) --
+	(309.33, 51.33) --
+	(308.69, 52.78) --
+	(307.80, 54.20) --
+	(306.62, 55.60) --
+	(305.12, 57.00) --
+	(303.33, 58.35) --
+	(301.51, 59.52) --
+	(299.68, 60.50) --
+	(297.84, 61.30) --
+	(295.97, 61.94) --
+	(294.05, 62.42) --
+	(292.09, 62.73) --
+	(290.05, 62.89) --
+	(287.95, 62.89) --
+	(285.95, 62.82) --
+	(284.10, 62.72) --
+	(282.40, 62.59) --
+	(280.83, 62.43) --
+	(279.40, 62.24) --
+	(278.09, 62.03) --
+	(276.91, 61.80) --
+	(275.83, 61.55) --
+	(274.96, 61.35) --
+	(274.36, 61.24) --
+	(273.97, 61.20) --
+	(273.76, 61.20) --
+	(273.66, 61.23) --
+	(273.62, 61.27) --
+	(273.62, 61.32) --
+	(273.67, 61.43) --
+	(273.81, 61.61) --
+	(274.05, 61.89) --
+	(274.41, 62.29) --
+	(274.92, 62.82) --
+	(275.61, 63.52) --
+	(276.50, 64.40) --
+	(277.62, 65.48) --
+	(278.99, 66.78) --
+	(280.62, 68.31) --
+	(282.09, 69.87) --
+	(283.31, 71.39) --
+	(284.31, 72.88) --
+	(285.10, 74.36) --
+	(285.71, 75.84) --
+	(286.14, 77.33) --
+	(286.41, 78.85) --
+	(286.52, 80.42) --
+	(286.44, 81.84) --
+	(286.16, 82.97) --
+	(285.70, 83.88) --
+	(285.05, 84.64) --
+	(284.16, 85.28) --
+	(282.97, 85.81) --
+	(281.39, 86.21) --
+	(279.32, 86.45) --
+	(276.85, 86.50) --
+	(274.46, 86.40) --
+	(272.20, 86.15) --
+	(270.05, 85.76) --
+	(267.99, 85.24) --
+	(266.01, 84.59) --
+	(264.11, 83.80) --
+	(262.28, 82.87) --
+	(260.50, 81.81) --
+	(258.75, 80.73) --
+	(257.03, 79.66) --
+	(255.33, 78.60) --
+	(253.67, 77.56) --
+	(252.04, 76.53) --
+	(250.43, 75.51) --
+	(248.85, 74.50) --
+	(247.29, 73.50);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (237.52, 20.71) rectangle (319.72,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (244.16, 20.71) rectangle (313.08, 89.63);
 \end{scope}
 \begin{scope}
 \definecolor{drawColor}{RGB}{0,0,0}
@@ -537,176 +547,181 @@
 \begin{scope}
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (229.89, 61.81) {$\Im(\hat\mu)$};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (236.52, 55.17) {$\Im(\hat\mu)$};
+\end{scope}
+\begin{scope}
+\definecolor{drawColor}{gray}{0.25}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (278.62, 96.84) {$p = 1$};
 \end{scope}
 \begin{scope}
 \definecolor{drawColor}{RGB}{255,255,255}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (325.21,  0.00) rectangle (433.62,108.41);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (331.85,  0.00) rectangle (426.98,108.41);
 \end{scope}
 \begin{scope}
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (345.93, 20.71) rectangle (428.12,102.91);
+\path[fill=fillColor] (352.57, 20.71) rectangle (421.48, 89.63);
 \definecolor{drawColor}{gray}{0.92}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (345.93, 36.94) --
-	(428.12, 36.94);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (352.57, 34.32) --
+	(421.48, 34.32);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (345.93, 56.92) --
-	(428.12, 56.92);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (352.57, 51.08) --
+	(421.48, 51.08);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (345.93, 76.91) --
-	(428.12, 76.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (352.57, 67.83) --
+	(421.48, 67.83);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (345.93, 96.89) --
-	(428.12, 96.89);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (352.57, 84.59) --
+	(421.48, 84.59);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (346.28, 20.71) --
-	(346.28,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (352.86, 20.71) --
+	(352.86, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (365.27, 20.71) --
-	(365.27,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (368.79, 20.71) --
+	(368.79, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (384.27, 20.71) --
-	(384.27,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (384.71, 20.71) --
+	(384.71, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (403.26, 20.71) --
-	(403.26,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (400.64, 20.71) --
+	(400.64, 89.63);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (422.25, 20.71) --
-	(422.25,102.91);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (416.56, 20.71) --
+	(416.56, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (345.93, 26.94) --
-	(428.12, 26.94);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (352.57, 25.94) --
+	(421.48, 25.94);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (345.93, 46.93) --
-	(428.12, 46.93);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (352.57, 42.70) --
+	(421.48, 42.70);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (345.93, 66.92) --
-	(428.12, 66.92);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (352.57, 59.46) --
+	(421.48, 59.46);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (345.93, 86.90) --
-	(428.12, 86.90);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (352.57, 76.21) --
+	(421.48, 76.21);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (355.78, 20.71) --
-	(355.78,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (360.82, 20.71) --
+	(360.82, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (374.77, 20.71) --
-	(374.77,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (376.75, 20.71) --
+	(376.75, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (393.76, 20.71) --
-	(393.76,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (392.67, 20.71) --
+	(392.67, 89.63);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (412.76, 20.71) --
-	(412.76,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (408.60, 20.71) --
+	(408.60, 89.63);
 \definecolor{drawColor}{RGB}{227,26,28}
 
-\path[draw=drawColor,line width= 1.1pt,line join=round] (381.31, 24.45) --
-	(383.94, 24.49) --
-	(386.47, 24.59) --
-	(388.92, 24.77) --
-	(391.28, 25.01) --
-	(393.55, 25.31) --
-	(395.75, 25.67) --
-	(397.87, 26.10) --
-	(399.92, 26.58) --
-	(401.90, 27.13) --
-	(403.83, 27.79) --
-	(405.71, 28.55) --
-	(407.56, 29.41) --
-	(409.37, 30.39) --
-	(411.14, 31.48) --
-	(412.90, 32.70) --
-	(414.63, 34.03) --
-	(416.33, 35.50) --
-	(417.88, 37.05) --
-	(419.24, 38.66) --
-	(420.43, 40.36) --
-	(421.47, 42.14) --
-	(422.36, 44.04) --
-	(423.10, 46.05) --
-	(423.70, 48.21) --
-	(424.15, 50.52) --
-	(424.38, 52.80) --
-	(424.35, 54.86) --
-	(424.06, 56.74) --
-	(423.54, 58.50) --
-	(422.77, 60.16) --
-	(421.73, 61.76) --
-	(420.39, 63.33) --
-	(418.68, 64.88) --
-	(416.66, 66.38) --
-	(414.59, 67.67) --
-	(412.47, 68.75) --
-	(410.29, 69.64) --
-	(408.03, 70.34) --
-	(405.69, 70.86) --
-	(403.25, 71.19) --
-	(400.68, 71.33) --
-	(398.00, 71.27) --
-	(395.46, 71.14) --
-	(393.14, 70.97) --
-	(391.04, 70.77) --
-	(389.14, 70.53) --
-	(387.42, 70.27) --
-	(385.89, 69.99) --
-	(384.52, 69.69) --
-	(383.31, 69.38) --
-	(382.34, 69.12) --
-	(381.69, 68.98) --
-	(381.28, 68.93) --
-	(381.06, 68.93) --
-	(380.96, 68.96) --
-	(380.93, 68.99) --
-	(380.94, 69.06) --
-	(381.02, 69.20) --
-	(381.21, 69.43) --
-	(381.52, 69.79) --
-	(381.97, 70.30) --
-	(382.58, 70.98) --
-	(383.39, 71.85) --
-	(384.42, 72.95) --
-	(385.70, 74.29) --
-	(387.25, 75.90) --
-	(389.06, 77.79) --
-	(390.70, 79.70) --
-	(392.06, 81.55) --
-	(393.16, 83.36) --
-	(394.04, 85.13) --
-	(394.70, 86.88) --
-	(395.17, 88.63) --
-	(395.45, 90.39) --
-	(395.56, 92.18) --
-	(395.45, 93.81) --
-	(395.13, 95.10) --
-	(394.63, 96.14) --
-	(393.92, 97.01) --
-	(392.98, 97.73) --
-	(391.72, 98.34) --
-	(390.06, 98.80) --
-	(387.90, 99.09) --
-	(385.31, 99.17) --
-	(382.77, 99.07) --
-	(380.31, 98.81) --
-	(377.90, 98.39) --
-	(375.55, 97.80) --
-	(373.24, 97.04) --
-	(370.96, 96.11) --
-	(368.70, 95.01) --
-	(366.45, 93.72) --
-	(364.23, 92.38) --
-	(362.05, 91.02) --
-	(359.90, 89.64) --
-	(357.79, 88.24) --
-	(355.71, 86.82) --
-	(353.66, 85.38) --
-	(351.65, 83.91) --
-	(349.67, 82.43);
+\path[draw=drawColor,line width= 1.1pt,line join=round] (382.23, 23.85) --
+	(384.44, 23.88) --
+	(386.56, 23.97) --
+	(388.61, 24.11) --
+	(390.59, 24.31) --
+	(392.50, 24.57) --
+	(394.34, 24.87) --
+	(396.12, 25.23) --
+	(397.84, 25.64) --
+	(399.50, 26.10) --
+	(401.12, 26.65) --
+	(402.70, 27.28) --
+	(404.24, 28.01) --
+	(405.76, 28.83) --
+	(407.25, 29.75) --
+	(408.72, 30.76) --
+	(410.17, 31.88) --
+	(411.60, 33.11) --
+	(412.90, 34.41) --
+	(414.04, 35.76) --
+	(415.04, 37.19) --
+	(415.91, 38.68) --
+	(416.65, 40.27) --
+	(417.27, 41.96) --
+	(417.78, 43.77) --
+	(418.16, 45.71) --
+	(418.35, 47.62) --
+	(418.32, 49.35) --
+	(418.08, 50.93) --
+	(417.64, 52.39) --
+	(417.00, 53.79) --
+	(416.13, 55.13) --
+	(415.00, 56.45) --
+	(413.57, 57.75) --
+	(411.88, 59.01) --
+	(410.14, 60.09) --
+	(408.36, 61.00) --
+	(406.53, 61.74) --
+	(404.64, 62.33) --
+	(402.68, 62.76) --
+	(400.63, 63.04) --
+	(398.48, 63.15) --
+	(396.22, 63.11) --
+	(394.10, 63.00) --
+	(392.16, 62.86) --
+	(390.39, 62.69) --
+	(388.80, 62.49) --
+	(387.36, 62.27) --
+	(386.07, 62.04) --
+	(384.92, 61.78) --
+	(383.91, 61.52) --
+	(383.10, 61.30) --
+	(382.55, 61.19) --
+	(382.21, 61.14) --
+	(382.02, 61.14) --
+	(381.94, 61.17) --
+	(381.92, 61.20) --
+	(381.93, 61.26) --
+	(381.99, 61.37) --
+	(382.15, 61.57) --
+	(382.41, 61.87) --
+	(382.78, 62.29) --
+	(383.30, 62.86) --
+	(383.98, 63.59) --
+	(384.84, 64.51) --
+	(385.91, 65.64) --
+	(387.21, 66.99) --
+	(388.73, 68.58) --
+	(390.11, 70.18) --
+	(391.25, 71.73) --
+	(392.17, 73.24) --
+	(392.91, 74.73) --
+	(393.46, 76.20) --
+	(393.85, 77.66) --
+	(394.09, 79.14) --
+	(394.18, 80.64) --
+	(394.09, 82.00) --
+	(393.82, 83.09) --
+	(393.40, 83.96) --
+	(392.81, 84.69) --
+	(392.02, 85.30) --
+	(390.96, 85.80) --
+	(389.57, 86.19) --
+	(387.76, 86.43) --
+	(385.59, 86.50) --
+	(383.46, 86.42) --
+	(381.39, 86.20) --
+	(379.37, 85.85) --
+	(377.40, 85.35) --
+	(375.46, 84.72) --
+	(373.55, 83.94) --
+	(371.66, 83.01) --
+	(369.77, 81.94) --
+	(367.91, 80.81) --
+	(366.08, 79.67) --
+	(364.28, 78.51) --
+	(362.51, 77.34) --
+	(360.77, 76.15) --
+	(359.05, 74.94) --
+	(357.36, 73.71) --
+	(355.70, 72.46);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (345.93, 20.71) rectangle (428.12,102.91);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] (352.57, 20.71) rectangle (421.48, 89.63);
 \end{scope}
 \begin{scope}
 \definecolor{drawColor}{RGB}{0,0,0}
@@ -716,6 +731,11 @@
 \begin{scope}
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (338.29, 61.81) {$\Im(\hat\mu)$};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (344.93, 55.17) {$\Im(\hat\mu)$};
+\end{scope}
+\begin{scope}
+\definecolor{drawColor}{gray}{0.25}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (387.02, 96.84) {$p = 2$};
 \end{scope}
 \end{tikzpicture}
